2006-11-18  Richard Levitte  <richard@levitte.org>

	* debian/monotone-server.monotone.init (d_start): Remove the
	branch argument, which was all-inklusive anyway.
	* debian/changelog: Mark a new version to make it possible to
	write a ...
	* debian/NEWS: New news item indicating to Debian users that
	they may need to do some changes if they want their servers
	to still run.

2006-11-18  Timtohy Brownawell  <tbrownaw@gmail.com>

	Make 'serve' always serve everything, and no longer take
	include/exclude patterns on the command line.

	Make the testsuite not use --nostd, so it can use the standard
	permissions hooks for tests that need restricted serve.

	Un-xfail the mtn:execute / umask test, since not having the
	standard hooks available was what made it not work.

2006-11-17  Timothy Brownawell  <tbrownaw@gmail.com>

	Make spawn_redirected work with blank filenames to not redirect
	some streams.

2006-11-17  Timothy Brownawell  <tbrownaw@gmail.com>

	Add status code reporting to the note_netsync_{begin,end} hooks.

2006-11-16  Richard Levitte  <richard@levitte.org>

	* contrib/ext_hooks.lua.in, contrib/ext_hooks_expand.pl: New
	files that implement a system that allows easy addition of hooks
	implementations without having to edit any file. You need to
	run the perl script contrib/ext_hooks_expand.pl to produce the
	file contrib/ext_hooks.lua, using contrib/ext_hooks.lua.in as
	a template and the hook function definitions found in
	monotone.texi.
	* README: Add a small blurb about the above files.

2006-11-17  Thomas Keller  <me@thomaskeller.biz>

	* cmd_automate.cc, cmd.hh, ...: renamed member variable 
	"options" to "opts" to make (hopefully) the gcc-3.3 build
	slaves happy

2006-11-15  Richard Levitte  <richard@levitte.org>

	* lua.cc (LUAEXT): Implement includedirpattern(), which is like
	includedir() but also takes a glob pattern for the files to load.
	* monotone.texi (Additional Lua Functions): Document
	includedirpattern().
	* testsuite.lua,